2008-12-16  Arno Rehn  <arno@arnorehn.de>

	* Make the pointerMap a Hashtable instead of a Dictionary - its implementation
	  in Mono seems buggy. This should fix a crash reported by Eric Butler.
	* Add FromArray() convenience method to Pointer<T>.

2008-12-14  Arno Rehn  <arno@arnorehn.de>

	* Don't use StackItem.s_long if we are on a 32 bit platform (i.e. a long isn't
	  64 bits). Use s_int instead if that's the case, otherwise the value would be
	  wrong. Is there a better solution than the one I implemented here?
	  Thanks to Eric Butler for reporting the bug!

2008-12-09  Arno Rehn  <arno@arnorehn.de>

	* Watch out for itemChange() calls and if necessary, add or remove global refs
	  to QGraphicsItems and subclasses. Thanks to Eric Butler for reporting the bug.

2008-11-30  Arno Rehn  <arno@arnorehn.de>

	* Check for return values being null and if so, don't alloc a GCHandle to it.
	  Fixes crashes when a virtual method returned null. Thanks to Eric Butler for
	  reporting the bug.

2008-11-28  Richard Dale  <richard.j.dale@gmail.com>
	* Add missing implicit QVariant constructors for QDate and QTime

2008-11-25  Arno Rehn  <arno@arnorehn.de>

	* Try initializing the smoke modules when creating a SmokeInvocation instance.

2008-10-25  Arno Rehn  <arno@arnorehn.de>

	* Use List<IQGraphicsItem> instead of List<QGraphicsItem> and check for
	  multiple inheritance in ConstructList(). Fixes bug reported by Eric Butler.
	* Add QCoreApplication.Invoke() which executes a delegate in the same thread
	  in which Q(Core)Application's main loop runs (usually the main thread).

2008-08-29  Arno Rehn  <arno@arnorehn.de>

	* Support char as a method return type.
	* Add a QIODeviceWrapper class which provides a System.IO.Stream interface
	  to a QIODevice.

2008-08-10  Richard Dale  <richard.j.dale@gmail.com>

	* Fix a bug reported by Stefano Crocco where primitives types and QStrings
	  were not working as arguments to slots and signals in smoke libs outside
	  the qt one.
