@@ -1,3 +1,9 @@
+2008-12-19  Richard Dale  <richard.j.dale@gmail.com>
+	* When the construct_copy() function was used to copy and instance, it
+	  wasn't initializing the binding for the new instance. This caused a
+	  crash when the destructor for the instance tried to make a callback with
+	  the null binding. 
+
 2008-12-16  Arno Rehn  <arno@arnorehn.de>
 
 	* Make the pointerMap a Hashtable instead of a Dictionary - its implementation
